Remove duplicate index.html and update navigation links

--- a/html/dashboard.html
+++ b/html/dashboard.html
@@ -15,7 +15,7 @@
                 <span class="subtitle">사용 가이드</span>
             </div>
             <nav class="tab-menu">
-                <a href="index.html" class="tab-item">등록 및 수정</a>
+                <a href="../index.html" class="tab-item">등록 및 수정</a>
                 <a href="dashboard.html" class="tab-item">대시보드</a>
                 <a href="entries.html" class="tab-item">대체기기 목록</a>
             </nav>
