Update text content

--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
 
                     <div class="step">
                         <p>등록을 완료하면 자동으로 대체기기 목록으로 이동됩니다.</p>
-                        <p>* 해당 화면에서는 금일 접수된 기기 발송건만 보여지도록 필터가 적용되어 있습니다.</p>
-                        <p>* 학습생의 아이디를 클릭하면 수정 모달창이 열립니다.</p>
+                        <p>해당 화면에서는 금일 접수된 기기 발송건만 보여지도록 필터가 적용되어 있습니다.</p>
+                        <p>학습생의 아이디를 클릭하면 수정 모달창이 열립니다.</p>
                         <div class="screenshot">
                             <img src="https://raw.githubusercontent.com/skyhigh79/image_register/main/register_04.png" alt="대체기기 목록">
                             <p class="screenshot-caption">등록 후 자동 이동된 대체기기 목록</p>
@@ -94,7 +94,7 @@
                 <div class="step-guide">
                     <div class="step">
                         <p>대체기기 목록 또는 대시보드에서 학습생 아이디를 클릭하면 수정 모달창이 열립니다.</p>
-                        <p>* 등록시 입력한 정보는 자동 노출되며, 배송 및 회수 일자는 직접 선택해야 합니다.</p>
+                        <p>등록시 입력한 정보는 자동 노출되며, 배송 및 회수 일자는 직접 선택해야 합니다.</p>
                         <div class="screenshot">
                             <img src="https://raw.githubusercontent.com/skyhigh79/image_register/main/register_06.png" alt="수정 모달창">
                             <p class="screenshot-caption">수정 모달창(상세 점검결과 옵션 비활성화)</p>
@@ -103,7 +103,7 @@
 
                     <div class="step">
                         <p>점검결과 항목을 '무상' 또는 '유상'으로 선택하면 상세 점검결과에 옵션이 추가됩니다.</p>
-                        <p>* 각 점검결과 옵션의 의미는 다음과 같습니다.</p>
+                        <p>각 점검결과 옵션의 의미는 다음과 같습니다.</p>
                         <ul>
                             <li><strong>없음:</strong> AS대상기 회수가 진행되지 않아 점검을 진행하지 않은 경우</li>
                             <li><strong>정상:</strong> 정상 판정으로 수리가 진행되지 않은 경우</li>
@@ -126,7 +126,7 @@
 
                     <div class="step">
                         <p>오접수 등의 이유로 대체기기 발송 이력 자체를 삭제하려면 '삭제'버튼을 클릭합니다.</p>
-                        <p>* 삭제할 경우 해당 건은 더 이상 확인할 수 없으며, 복구도 불가능합니다.</p>
+                        <p>삭제할 경우 해당 건은 더 이상 확인할 수 없으며, 복구도 불가능합니다.</p>
                         <div class="screenshot">
                             <img src="https://raw.githubusercontent.com/skyhigh79/image_register/main/register_09.png" alt="삭제 버튼">
                             <p class="screenshot-caption">삭제 버튼 클릭시</p>
